# AI_GUARD

./: .gitignore  .readthedocs.yaml  AIGuard_capture.ipynb  AIGuard_data.ipynb  AIGuard_dataset.ipynb  AIGuard_dataset_augmentation.ipynb  AIGuard_private_face_recognition.ipynb  Data_creation_augmentation.ipynb  LFW_v1.ipynb  README.md  ai-guard-lfw-v1.ipynb  ai_guard.ipynb  aiguard-benchmarking.ipynb  authorized_faces.db  pyproject.toml  requirements.txt  requirements_cv_ai.txt
ai_guard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/about/: index.md  licence.md  team.md
docs/source/development/: contributing.md  index.md  roadmap.md  setup.md
docs/source/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/source/technical/: api.md  architecture.md  data-model.md  index.md  models.md
docs/source/user-guide/: alerts.rst  enrollment.rst  index.md  management.md  recognition.md
